# robo_3

./: CMakeLists.txt  README.md  package.xml
launch/: launch.py  launch_3.py
model/: robo3.sdf
src/: cefet.cpp
